fix: too long todo text

--- a/src/components/Todos/Todo/Todo.module.scss
+++ b/src/components/Todos/Todo/Todo.module.scss
@@ -95,10 +95,18 @@
 .label {
   @extend %font;
 
+  max-width: 75%;
   display: flex;
   align-items: center;
   margin-right: auto;
   pointer-events: none;
+
+  div {
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
 
   &::before {
     @extend %mark;
